syntax = "proto3";
package roleProto;
option go_package = "./app/master-data/role/master_role";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service MasterRoleService {
  rpc GetAllRole(GetAllRoleRequest) returns (GetAllRoleResponse) {
    option (google.api.http) = {
      get: "/master-role"
    };
  }
  rpc GetOneUser(GetOneRoleRequest) returns (GetOneRoleResponse) {
    option (google.api.http) = {
      get: "/master-role/{roleName}"
    };
  }
}
message GetAllRoleRequest {
  int64 skip = 1;
  int64 take = 2;
}
message GetOneRoleRequest {
  string roleName = 1;
}
message GetAllRoleResponse {
  bool isError = 1;
  string errMessage = 2;
  repeated RoleItem data = 3;
}
message GetOneRoleResponse {
  bool isError = 1;
  string errMessage = 2;
  RoleItem data = 3;
}
message RoleItem {
  int64 ID = 1;
  string role_code = 2;
  string role_name = 3;
  bool is_active = 4;
  int64 created_by = 5;
  google.protobuf.Timestamp created_date = 6;
  int64 modified_by = 7;
  google.protobuf.Timestamp modified_date = 8;
}
